--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example using sigfead framework\n",
+    "Example using sigfeat framework\n",
     "==============================="
    ]
   },
