Refactor and debugging, change some concepts.

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -313,7 +313,7 @@
       "      \"metadata\": {\n",
       "        \"classname\": \"AbsMax\"\n",
       "      },\n",
-      "      \"params\": {\n",
+      "      \"parameters\": {\n",
       "        \"name\": \"absmax\"\n",
       "      }\n",
       "    },\n",
@@ -321,7 +321,7 @@
       "      \"metadata\": {\n",
       "        \"classname\": \"BlockPosition\"\n",
       "      },\n",
-      "      \"params\": {\n",
+      "      \"parameters\": {\n",
       "        \"name\": \"index\"\n",
       "      }\n",
       "    },\n",
@@ -329,7 +329,7 @@
       "      \"metadata\": {\n",
       "        \"classname\": \"RMS\"\n",
       "      },\n",
-      "      \"params\": {\n",
+      "      \"parameters\": {\n",
       "        \"name\": \"rms\"\n",
       "      }\n",
       "    }\n",
@@ -426,7 +426,7 @@
       "      \"name\": \"testsig\",\n",
       "      \"samplerate\": 16000\n",
       "    },\n",
-      "    \"params\": {\n",
+      "    \"parameters\": {\n",
       "      \"blocksize\": 512,\n",
       "      \"overlap\": 256\n",
       "    }\n",
